# Separo-ChatBot

./: .dockerignore  .gitignore  Dockerfile  README.md  Upgrades.txt  chat.py  data.db  docker-compose.yml  pyproject.toml  requirements.txt  run.py  runn.py  setup_llm.py
.streamlit/: config.toml
config/: options.py  settings.py
core/: auth.py  auth_core.py  chat_core.py  database.py  setup_llm.py
ui/: auth_page.py  chat_ui.py  login_ui.py  main_ui.py  register_ui.py  ui_functions.py  view.py
