[project]
name = "separo"
version = "0.1.0"
description = "a simple chat bot using langchain"
authors = [
    {name = "Ali",email = "alisoleimanian.it@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "dynaconf (>=3.2.11,<4.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.31,<0.4.0)",
    "openai (>=1.101.0,<2.0.0)",
    "streamlit (>=1.48.1,<2.0.0)",
    "groq (>=0.31.0,<0.32.0)",
    "langchain-groq (>=0.3.7,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
